--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
-DB_HOST=caboose.proxy.rlwy.net
-DB_USER=root
-DB_PASS=vZBfBKNrNYxmsQFXGmrLQmfNXHVrwJCk
+DB_HOST=interchange.proxy.rlwy.net
+DB_PORT=16822
+DB_USER=postgres
+DB_PASS=VCghOSXt1brChQjHboZCqQgMvCFIMpVf
 DB_NAME=railway
-DB_PORT=55779
